Add self signed certificate

--- a/ngx_google_deployment/nginx.conf
+++ b/ngx_google_deployment/nginx.conf
@@ -104,11 +104,20 @@ http
 
 #google_proxy config start
     server {
-        listen 80;
-
-        server_name g.doufu.ru;
+	    listen 80;
+		server_name g.doufu.ru;
+		rewrite ^/(.*)$ https://g.doufu.ru$1 permanent;
+	}
+    server {
+        listen 443;
+		server_name g.doufu.ru;
         resolver 8.8.8.8;
-
+#ssl certificate
+		ssl on;
+		ssl_certificate /var/www/ssls/g.doufu.ru.crt;
+        ssl_certificate_key /var/www/ssls/g.doufu.ru.key;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 #forbid spider
         if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googlebot-Image|Mediapartners-Google|Adsbot-Google|Feedfetcher-Google|Yahoo! Slurp|Yahoo! Slurp China|YoudaoBot|Sosospider|Sogou spider|Sogou web spider|MSNBot|ia_archiver|Tomato Bot")
         {
@@ -179,9 +188,15 @@ http
 
 #scholar config start
     server {
-        listen 80;
+        listen 443;
         server_name x.doufu.ru
         resolver 8.8.8.8;
+#ssl certificate
+		ssl on;
+		ssl_certificate /var/www/ssls/x.doufu.ru.crt;
+        ssl_certificate_key /var/www/ssls/x.doufu.ru.key;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
 #forbid spider
         if ($http_user_agent ~* "qihoobot|Baiduspider|Googlebot|Googlebot-Mobile|Googlebot-Image|Mediapartners-Google|Adsbot-Google|Feedfetcher-Google|Yahoo! Slurp|Yahoo! Slurp China|YoudaoBot|Sosospider|Sogou spider|Sogou web spider|MSNBot|ia_archiver|Tomato Bot")
