update subs_filter option

--- a/ngx_google_deployment/nginx.conf
+++ b/ngx_google_deployment/nginx.conf
@@ -156,11 +156,9 @@ http
             proxy_set_header Accept-Language "zh-CN";
             proxy_set_header Cookie "PREF=ID=047808f19f6de346:U=0f62f33dd8549d11:FF=2:LD=en-US:NW=1:TM=1325338577:LM=1332142444:GM=1:SG=2:S=rE0SyJh2W1IQ-Maw";
 
+            subs_filter www.google.com g.doufu.ru;
+            subs_filter scholar.google.com x.doufu.ru;
 
-            subs_filter http://www.google.com http://g.doufu.ru;
-            subs_filter https://www.google.com http://g.doufu.ru;
-            subs_filter http://scholar.google.com http://x.doufu.ru;
-            subs_filter https://scholar.google.com http://x.doufu.ru;
 
 #set your analyze code
 #subs_filter '</body>' '</body><script src="https://s4.cnzz.com/stat.php?id=1256202926&web_id=1256202926" language="JavaScript"></script>';
@@ -236,15 +234,11 @@ http
             proxy_set_header Accept-Language "zh-CN";
             proxy_set_header Cookie "PREF=ID=047808f19f6de346:U=0f62f33dd8549d11:FF=2:LD=en-US:NW=1:TM=1325338577:LM=1332142444:GM=1:SG=2:S=rE0SyJh2W1IQ-Maw";
 
-            subs_filter http://www.google.com http://g.doufu.ru;
-            subs_filter https://www.google.com http://g.doufu.ru;
-            subs_filter http://scholar.google.com http://x.doufu.ru;
-            subs_filter https://scholar.google.com http://x.doufu.ru;
+            subs_filter www.google.com g.doufu.ru;
+            subs_filter scholar.google.com x.doufu.ru;
 
 #set your analyze code
-#subs_filter '</body>' '</body><script src="https://s4.cnzz.com/stat.php?id=1256202926&web_id=1256202926" language="JavaScript"></script>';
-
-            	
+#subs_filter '</body>' '</body><script src="https://s4.cnzz.com/stat.php?id=1256202926&web_id=1256202926" language="JavaScript"></script>'; 	
         }
 
     }
