--- a/ngx_google_deployment/nginx.conf
+++ b/ngx_google_deployment/nginx.conf
@@ -116,6 +116,9 @@ http
 		ssl on;
 		ssl_certificate /var/www/ssls/g.doufu.ru.crt;
         ssl_certificate_key /var/www/ssls/g.doufu.ru.key;
+		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+		ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-SHA:AES128-GCM-SHA256:AES128-SHA256:AES128-SHA:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:AES256-GCM-SHA384:AES256-SHA256:AES256-SHA:ECDHE-RSA-AES128-SHA256:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!DSS:!PKS;
+		ssl_prefer_server_ciphers on;
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
 #forbid spider
@@ -149,6 +152,7 @@ http
 
             proxy_set_header Host "encrypted.google.com";
             proxy_set_header Accept-Encoding "";
+			proxy_set_header remote-user-ip $remote_addr;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
@@ -193,6 +197,9 @@ http
 		ssl on;
 		ssl_certificate /var/www/ssls/x.doufu.ru.crt;
         ssl_certificate_key /var/www/ssls/x.doufu.ru.key;
+		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+		ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-SHA:AES128-GCM-SHA256:AES128-SHA256:AES128-SHA:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:AES256-GCM-SHA384:AES256-SHA256:AES256-SHA:ECDHE-RSA-AES128-SHA256:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!DSS:!PKS;
+		ssl_prefer_server_ciphers on;
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
 
@@ -227,6 +234,7 @@ http
 
             proxy_set_header Host "scholar.google.com";
             proxy_set_header Accept-Encoding "";
+			proxy_set_header remote-user-ip $remote_addr;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
